# freeview

./: README.md  pyproject.toml
src/freeview/: tstomp4.py
tests/: output-of-ffprobe.json  test_freeview.py
