[tool.poetry]
name = "freeview"
version = "0.1.1"
description = "utilities for managing freeview transport stream recordings"
authors = ["ccdale <chris.charles.allison+freeviewgit@gmail.com>"]
readme = "README.md"
packages = [{include = "freeview", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
ccaerrors = "^0.1.2"
ccalogging = "^0.4.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
